--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -11,7 +11,7 @@ starting out in the wider world of computational statistics, as maximum
 likelihood is the fundamental approach used in most applied statistics, but
 which is also a key aspect of the Bayesian approach. Least squares loss is not
 confined to the standard regression setting, but is widely used in more
-predictive/'algorithmic' approaches e.g. in machine learning and elsewhere.
+predictive/'algorithmic' approaches e.g. in machine learning and elsewhere.  You can find a [Python version of the code in the supplemental section](#python-linreg).
 
 
 ## Data Setup
