--- a/mixed-model-two-factor.Rmd
+++ b/mixed-model-two-factor.Rmd
@@ -2,10 +2,14 @@
 
 
 
-An approach for two factor random effects model via maximum likelihood in R Matlab and Julia. It's based on Statistical Modeling and Computation (2014) Chapter 10, example 10.10. The data regards the breeding value of a set of five sires in raising pigs. Each sire is mated to a random group of dams, with the response being the average daily weight gain in pounds of two piglets in each litter.  See the [previous chapter][One-factor Mixed Model] for a one factor model, and two_factor_RE.m and two_factor_RE.jl for the Matlab and Julia versions of this example on the GitHub site. Note that the text has a typo on the `sigma2` variance estimate (value should be .0023 not .023).
+An approach for two factor random effects model via maximum likelihood in R Matlab and Julia. It's based on Statistical Modeling and Computation (2014) Chapter 10, example 10.10.   See the [previous chapter][One-factor Mixed Model] for a one factor model, and the [Supplemental Section][Two-factor] for the Matlab and Julia versions of this example. Note that the text has a typo on the `sigma2` variance estimate (value should be .0023 not .023).
 
 
 ## Data Setup
+
+The data regards the breeding value of a set of five sires in raising pigs. Each
+sire is mated to a random group of dams, with the response being the average
+daily weight gain in pounds of two piglets in each litter.
 
 ```{r two-factor-re-setup}
 library(tidyverse)
@@ -21,7 +25,7 @@ d = data.frame(d[order(d$sire), ], y)
 
 ## Function
 
-The function takes the log variances `eta`* as input to keep positive.
+The function takes the log variances `eta` as input to keep positive.
 
 ```{r two-factor-re}
 two_factor_re <- function(mu, eta_alpha, eta_gamma, eta) {
@@ -64,9 +68,9 @@ starts = list(
   eta = var(y) / 3
 )
 
-Xalpha = diag(5) %x% rep(1,4)
+Xalpha = diag(5) %x% rep(1, 4)
 
-Xgamma = diag(10) %x% rep(1,2)
+Xgamma = diag(10) %x% rep(1, 2)
 ```
 
 
